# sphinx-copybutton

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  RELEASES.md  genindex.html  index.html  objects.inv  package-lock.json  package.json  pyproject.toml  readthedocs.yml  search.html  searchindex.js  setup.py  sphinx_copybutton.py  tox.ini
.circleci/: config.yml
.github/workflows/: integration.yml  publish.yml
_static/: copybutton.css  copybutton.js
doc/: Makefile  conf.py  contribute.rst  customize.rst  index.rst  notebook.md  requirements.txt
docs/: Makefile  conf.py  index.md  index.rst  requirements.txt  use.md
docs/_static/: custom.css
docs/contribute/: index.md
docs/reference/: example.md  literal.py
docs/second/: second_page.rst
second/: second_page.html
sphinx_copybutton/: __init__.py  sphinx_copybutton.py
sphinx_copybutton/_static/: clipboard.min.js  copybutton.css  copybutton.js  copybutton.js_t  copybutton_funcs.js  test.js
