[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "sphinx_copybutton"
author = "Chris Holdgraf"
author-email = "choldgraf@berkeley.edu"
home-page = "https://github.com/choldgraf/sphinx_copybutton"
classifiers = ["License :: OSI Approved :: MIT License"]
