[build-system]
requires = ["flit", "setuptools", "wheel", "sphinx"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "sphinx_copybutton"
author = "Chris Holdgraf"
author-email = "choldgraf@berkeley.edu"
home-page = "https://github.com/choldgraf/sphinx-copybutton"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
dist-name = "sphinx-copybutton"
keywords = "documentation css copy code-cells"

[tool.flit.metadata.urls]
Documentation = "http://predictablynoisy.com/sphinx-copybutton"
